linq: немного сахара

--- a/linq/linq.ipynb
+++ b/linq/linq.ipynb
@@ -20,9 +20,7 @@
     "    current = 1\n",
     "    while(True):\n",
     "        yield current\n",
-    "        nxt = prev + current\n",
-    "        prev = current\n",
-    "        current = nxt"
+    "        current, prev = current + prev, current"
    ]
   },
   {
@@ -53,8 +51,7 @@
    "outputs": [],
    "source": [
     "def select(func, generator):\n",
-    "    for i in generator:\n",
-    "        yield func(i)"
+    "    return map(func, generator)"
    ]
   },
   {
@@ -85,9 +82,7 @@
    "outputs": [],
    "source": [
     "def where(pred, generator):\n",
-    "    for i in generator:\n",
-    "        if (pred(i) == True):\n",
-    "            yield i"
+    "    return filter(pred, generator)"
    ]
   },
   {
@@ -180,8 +175,7 @@
    "outputs": [],
    "source": [
     "def order_by(key, generator):\n",
-    "    lst = to_list(generator)\n",
-    "    return sorted(lst, key=key)"
+    "    return sorted(generator, key=key)"
    ]
   },
   {
@@ -408,6 +402,13 @@
     "               group_by(lambda x:x, \n",
     "                        read_file('file.txt')))))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
